--- a/assets/_contacto.scss
+++ b/assets/_contacto.scss
@@ -16,6 +16,7 @@
 
   .formCheck {
     display: flex;
+    gap: 2rem;
    
   }
 
@@ -98,14 +99,82 @@
 
   
   .contactButton {
-    display: inline-block;
+    display: block;
     background-color: var(--green-color);
     color: #fff;
     text-align: center;
     border-radius: 5px;
-    padding: 0.3rem 3rem;
+    padding: 0.3rem 4rem;
     margin: 0 auto;
     border: none;
     cursor: pointer;
     margin: auto;
+    border-radius: 20px;
+    font-size: 1.4rem;
+    font-weight: bold;
   }
+
+
+  .checkbox {
+    display: grid;
+    grid-template-columns: min-content auto;
+    grid-gap: .5rem;
+    font-size: 1rem;
+  
+  }
+  
+  .checkbox__control {
+    display: inline-grid;
+    width: 1em;
+    height: 1em;
+    border: 0.1rem solid var(--green-color);
+  
+    svg {
+      transition: transform 0.1s ease-in 25ms;
+      transform: scale(0);
+      transform-origin: bottom left;
+    }
+  }
+  
+  .checkbox__input {
+    display: grid;
+    grid-template-areas: "checkbox";
+  
+    > * {
+      grid-area: checkbox;
+    }
+  
+    input {
+      opacity: 0;
+      width: 1em;
+      height: 1em;
+  
+      &:focus + .checkbox__control {
+        box-shadow: 0 0 0 0.05em #fff, 0 0 0.15em 0.1em var(--green-color);
+      }
+  
+      &:checked + .checkbox__control svg {
+        transform: scale(1);
+      }
+  
+    }
+  }
+
+
+  @media screen and (max-width: 780px) {
+  .formCheck {
+    flex-direction: column;
+
+    gap: 1rem;
+   
+  }
+
+  .contactoBox {
+    padding: 0 .5rem;
+   
+  }
+
+
+
+
+}
