--- a/assets/styles.css
+++ b/assets/styles.css
@@ -146,6 +146,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 2rem;
 }
 
 .wrapper_left_text {
@@ -233,16 +234,89 @@
 }
 
 .contactButton {
-  display: inline-block;
+  display: block;
   background-color: var(--green-color);
   color: #fff;
   text-align: center;
   border-radius: 5px;
-  padding: 0.3rem 3rem;
+  padding: 0.3rem 4rem;
   margin: 0 auto;
   border: none;
   cursor: pointer;
   margin: auto;
+  border-radius: 20px;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.checkbox {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: min-content auto;
+      grid-template-columns: -webkit-min-content auto;
+      grid-template-columns: min-content auto;
+  grid-gap: .5rem;
+  font-size: 1rem;
+}
+
+.checkbox__control {
+  display: -ms-inline-grid;
+  display: inline-grid;
+  width: 1em;
+  height: 1em;
+  border: 0.1rem solid var(--green-color);
+}
+
+.checkbox__control svg {
+  -webkit-transition: -webkit-transform 0.1s ease-in 25ms;
+  transition: -webkit-transform 0.1s ease-in 25ms;
+  transition: transform 0.1s ease-in 25ms;
+  transition: transform 0.1s ease-in 25ms, -webkit-transform 0.1s ease-in 25ms;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform-origin: bottom left;
+          transform-origin: bottom left;
+}
+
+.checkbox__input {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "checkbox";
+}
+
+.checkbox__input > * {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: checkbox;
+}
+
+.checkbox__input input {
+  opacity: 0;
+  width: 1em;
+  height: 1em;
+}
+
+.checkbox__input input:focus + .checkbox__control {
+  -webkit-box-shadow: 0 0 0 0.05em #fff, 0 0 0.15em 0.1em var(--green-color);
+          box-shadow: 0 0 0 0.05em #fff, 0 0 0.15em 0.1em var(--green-color);
+}
+
+.checkbox__input input:checked + .checkbox__control svg {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+@media screen and (max-width: 780px) {
+  .formCheck {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 1rem;
+  }
+  .contactoBox {
+    padding: 0 .5rem;
+  }
 }
 
 .paraCemento {
