--- a/assets/styles.css
+++ b/assets/styles.css
@@ -113,13 +113,8 @@
 
 @media screen and (max-width: 570px) {
   .grid_proyectos {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-grid-columns: (minmax(280px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   }
   .card_proyectos {
     padding: .5rem;
@@ -316,6 +311,10 @@
   }
   .contactoBox {
     padding: 0 .5rem;
+  }
+  .contactButton {
+    padding: 0.3rem 3rem;
+    font-size: 1.2rem;
   }
 }
 
