--- a/assets/_cemento.scss
+++ b/assets/_cemento.scss
@@ -15,7 +15,7 @@
 
 .videoResponsive {
   overflow:hidden;
-  padding-bottom:630px; /* Adecua este valor para controlar la altura del video */
+  padding-bottom:630px;
   position:relative;
   height:0;
   margin-bottom: 4rem;
@@ -47,4 +47,7 @@ iframe { width: 1120px;
   
   }
 
+  .videoResponsive {
+    padding-bottom: 150px;
+  }
 }
