--- a/assets/styles.css
+++ b/assets/styles.css
@@ -338,7 +338,6 @@
 .videoResponsive {
   overflow: hidden;
   padding-bottom: 630px;
-  /* Adecua este valor para controlar la altura del video */
   position: relative;
   height: 0;
   margin-bottom: 4rem;
@@ -371,6 +370,9 @@ iframe {
   iframe {
     width: 300px;
     height: 150px;
+  }
+  .videoResponsive {
+    padding-bottom: 150px;
   }
 }
 
