--- a/assets/_cemento.scss
+++ b/assets/_cemento.scss
@@ -42,6 +42,18 @@ iframe { width: 1120px;
     flex-direction: column;
   }
 
+  iframe { width: 400px;
+    height: 450px;
+  
+  }
+
+  .videoResponsive {
+    padding-bottom: 450px;
+  }
+}
+
+@media screen and (max-width: 570px) {
+
   iframe { width: 300px;
     height: 150px;
   
@@ -50,4 +62,6 @@ iframe { width: 1120px;
   .videoResponsive {
     padding-bottom: 150px;
   }
+
+
 }
