--- a/assets/_servicios.scss
+++ b/assets/_servicios.scss
@@ -1,11 +1,15 @@
 
 .nuestros_servicios {
     padding-bottom: 5rem;
+    max-width: 1200px;
+    width: calc(100% - 4rem);
+    margin: auto;
+
 }
 
 .gridServicios {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     gap: 1rem;
   }
 
@@ -55,5 +59,22 @@
   .serviciosCard_info {
       font-size: .9rem;
   }
+
+}
+
+@media screen and (max-width: 350px) {
+
+    .nuestros_servicios {
+        width: calc(100% - 2rem);
+
+    }
+
+      .cardsText_cardServicios {
+       
+        padding: .3rem;
+       
+    }
+
+    
 
 }
