--- a/assets/styles.css
+++ b/assets/styles.css
@@ -830,4 +830,10 @@ header {
     margin-left: 0;
   }
 }
+
+@media screen and (max-width: 350px) {
+  .cardsText_card h4 {
+    font-size: 1.7rem;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
